--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,10 +15,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="particles-js"></div>
 
     <footer class="main-footer">
       <section class="section-footer">
-        <img class="imagen-ssl" src="/PROTECTED-SSL.png" alt="SSL" />
+        <img class="imagen-ssl" src="./public/Logo.jpeg" alt="SSL" />
         <h1 class="h1-footer">© 2025 www.paoloestilista.cl</h1>
         <h3 class="h2-footer">Estilista a Domicilio - Derechos Reservados</h3>
         <h3 class="h3-footer">Desarrollado por Jean Colil</h3>
@@ -25,6 +27,8 @@
     </footer>
 
     <script type="module" src="/src/main.jsx"></script>
+    <script src="./src/js/particles.js"></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
